Added automated testing to OS Level Programming, clarified examples and changed python sub-exercise to seek

--- a/os_level/Makefile
+++ b/os_level/Makefile
@@ -1,4 +1,11 @@
 all: shell tool
 
+clean:
+	rm -f shell tool
+
+test: all
+	./testShell.sh ./shell
+	./testTool.sh ./tool
+
 %: %.cc %.hh
 	g++ -o $@ $<
